Add initial unit tests